# musical-spork

./: CONTRIBUTING.md  README.md
.github/: copilot-instructions.md
docs/: api-gateway-architecture.md
server/api-gateway/: .env.example  CODEBASE_REVIEW.md  DEVELOPMENT_ROADMAP.md  Dockerfile  ENHANCEMENT_RECOMMENDATIONS.md  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
server/api-gateway/app/: __init__.py
server/api-gateway/app/api/: __init__.py
server/api-gateway/app/api/v1/: __init__.py  admin.py  auth.py  health.py  users.py
server/api-gateway/app/auth/: middleware.py
server/api-gateway/app/caching/: __init__.py  middleware.py
server/api-gateway/app/core/: config.py  exceptions.py  redis.py
server/api-gateway/app/monitoring/: logging.py  metrics.py  middleware.py  tracing.py
server/api-gateway/app/rate_limiting/: __init__.py  middleware.py
server/api-gateway/app/security/: headers.py
server/api-gateway/docs/: CODEBASE_REVIEW.md  DEVELOPMENT_ROADMAP.md  ENHANCEMENT_RECOMMENDATIONS.md  IMPLEMENTATION_PLAN.md
server/api-gateway/tests/: conftest.py
